--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -7,21 +7,41 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding-top: 12px;
+  padding-bottom: 12px;
 }
 
 .title {
   background: #e3f4ff;
+  padding: 12px;
+  margin-top: 12px;
+  margin-bottom: 12px;
+  margin-left: 12px;
+  margin-right: 12px;
 }
 
 .content {
   background: #e3f4ff;
+  padding: 24px 12px;
+  margin: 12px;
 }
 
 .button-container {
   background: #e3f4ff;
+  padding-top: 18px;
+  padding-bottom: 18px;
+  margin-top: 12px;
+  margin-bottom: 0px;
+  margin-left: 12px;
+  margin-right: 12px;
+  text-align: center;
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px 30px;
 }
