--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+
+  display: flex;
+  justify-content: space-between;
+  padding: 5px;
 }
 
 .profile-image {
@@ -45,4 +49,24 @@ a {
 
 ul {
   list-style-type: none;
+
+  margin: 0;
+  padding: 0;
+  gap: 16px;
 }
+
+.left, .right {
+
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.links {
+
+  display: flex;
+}
+
+/* .links li {
+  padding: 10px;
+} */
