--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -6,7 +6,7 @@
 .container {
   text-align: center;
   display: grid;
-  grid-template:2fr 1fr 20fr 1fr / 1fr 3fr;
+  grid-template:2fr 1fr 12fr 1fr / 1fr 3fr;
   grid-template-areas: 
     "header header"
     "sidebar nav"
@@ -52,7 +52,7 @@
   grid-area: sidebar;
   display: grid;
   grid-template:1fr 1fr 1fr 1fr / 1fr;
-  row-gap: 10px;
+  row-gap: 20px;
 }
 
 .sidebar .photo {
@@ -90,6 +90,12 @@
 .article {
   background-color: #bccbde;
   grid-area: article;
+  display: grid;
+  grid-template-rows: repeat(2, minmax(180px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-auto-rows: minmax(180px, 1fr);
+  grid-auto-columns: minmax(250px, 1fr);
+  gap: 10px;
 }
 
 .article p {
